clusters/titania/apps/torrents/lidarr/lidarr-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
spec:
  selector: 
    app: lidarr
  type: ClusterIP
  ports:
  - port: 8686
    targetPort: 8686
