clusters/titania/apps/torrents/lidarr/lidarr-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - "*.cosmos.cboxlab.com"
    secretName: cosmos-cboxlab-cert
  rules:
  - host: lidarr.cosmos.cboxlab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lidarr
            port:
              number: 8686
